fluent-syntax/test/fixtures_behavior/comment-continues-with-one-slash.ftl
// This is a normal comment
/ but this is not
//~ ERROR E0003, pos 29, args "/"
